<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_access">Sign in to access your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="get_started">Get Started</string>
    <string name="create_free_account">by creating a free account.</string>
    <string name="full_name">Full name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong Password</string>
    <string name="agree_terms">By checking the box you agree to our Terms and Conditions.</string>
    <string name="already_member">Already a member?</string>
    <string name="login_now">Login in</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>