<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register_window">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_background"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="74dp"
            android:text="@string/get_started"
            android:textColor="#000"
            android:textSize="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/creating_free_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/create_free_account"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/welcomeText"
            app:layout_constraintEnd_toEndOf="@+id/welcomeText"
            app:layout_constraintStart_toStartOf="@+id/welcomeText" />


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:drawableRight="@drawable/user"
            android:background="@drawable/email_background"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="22dp"
            android:text="@string/full_name"
            android:textColor="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:drawableRight="@drawable/email_icon"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/email_background"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="22dp"
            android:text="@string/valid_email"
            android:textColor="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/email_background"
            android:drawableRight="@drawable/smartphone"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="22dp"
            android:text="@string/phone_number"
            android:textColor="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/email_background"
            android:drawableRight="@drawable/lock"
            android:inputType="textVisiblePassword"
            android:minHeight="48dp"
            android:paddingLeft="22dp"
            android:text="@string/strong_password"
            android:textColor="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/registerLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_terms"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="@id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="12dp"
            android:text="@string/already_member"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="12dp"
            android:text="@string/login_now"
            android:textColor="#0000FF"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/registerLink"
            app:layout_constraintTop_toTopOf="@id/registerLink" />

    </androidx.constraintlayout.widget.ConstraintLayout>
